Adjustment on structural engineer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <img src="lekan.jpg" alt="Lekan profile picture">
   <h1>Lekan Osindeinde </h1>
-  <p><em>Master of science in <strong><a href="structural.html">Structural Engineer</a></strong> at Bauhaus University Weimar</em></p>
+  <p><em>Master of science in <strong><a href="Structural.html">Structural Engineer</a></strong> at Bauhaus University Weimar</em></p>
   <hr>
   <h3>Education</h3>
   <ul>
